--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-slick",
+  "name": "wjl-react-slick",
   "version": "0.14.5",
   "description": " React port of slick carousel",
   "main": "./lib",
@@ -74,7 +74,7 @@
   "jest": {
     "setupFiles": ["test-setup.js"]
   },
-  "npmName": "react-slick",
+  "npmName": "wjl-react-slick",
   "npmFileMap": [
     {
       "basePath": "/dist/",
